Correcting alignment

--- a/src/app/letterboard/controlboard.component.scss
+++ b/src/app/letterboard/controlboard.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   padding: 40px 0px;
+  text-align: center;
 
   .begin-button {
     width: 160px;
